@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Wed Jul 11 22:57:59 PDT 2012
-build.number=565
+#Thu Jul 12 16:59:14 PDT 2012
+build.number=566
