@@ -1,6 +1,7 @@
 v1.6.2 - 
 * Ticket #118: error when using spawnWorldRandom strategy
 * cleaned up some spurious warning messages related to some missing default config settings
+* added "core.bedHomeOverwritesDefault" flag for determining how bed home vs default home (/sethome) interact (default = true)
 
 v1.6.1 - Jul 8, 2012
 * made strategies no longer case-sensitive in the configuration
